# elice-ai-cloud-rag-qa

./: .env.example  .gitignore  README.md  pyproject.toml
data/: sources.json
data/processed/: chunks.jsonl
data/raw/: datahub-browser.json  datahub-connection-guide.json  datahub-cyberduck.json  datahub-external-connection.json  datahub-ondemand.json  elicecloud-introduction.json  elicecloud-overview.json  faq-cuda.json  faq-runbox-eci.json  ml-api-api-key.json  ml-api-api.json  ml-api-auto-scaling.json  ml-api-bentoml.json  ml-api-model-library.json  ml-api-serverless.json  runbox-create-instances.json  runbox-instance-monitoring.json  runbox-overview.json  runbox-port.json  runbox-ssh.json
eval/: gold_set.jsonl
eval/reports/: azure-smoke.md  baseline-fixed.md  baseline.md  elice-baseline-fixed.md  elice-experiment.md  elice-final-judge.md  elice-final.md  elice-heading-top5-strict.md  elice-heading-top8-keyword-rerank.md  elice-heading-top8-relaxed.md  elice-improved-heading.md  experiment.md  improved-heading.md
src/elice_rag/: __init__.py  config.py
src/elice_rag/api/: main.py
src/elice_rag/eval/: __init__.py  experiment.py  gold_set.py  judge.py  metrics.py  report.py  runner.py
src/elice_rag/providers/: __init__.py  azure_openai.py  base.py  elice.py  factory.py  local_embeddings.py  mock.py
src/elice_rag/rag/: __init__.py  chunk.py  citations.py  clean.py  generate.py  index.py  ingest.py  prompts.py  (+2 more)
tests/: test_chunking.py  test_citations.py  test_elice_provider.py  test_eval_metrics.py  test_judge.py  test_refusal.py  test_retrieval.py
