[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elice-rag"
version = "0.1.0"
description = "Citation-based RAG QA service with an evaluation harness for the Elice AI Engineer mini project."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "numpy>=1.26",
  "pydantic>=2.6",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
extras = [
  "beautifulsoup4>=4.12",
  "chromadb>=0.5",
  "sentence-transformers>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

